update code to use java 21 (#284)
* update code to use java 21

* update circle config

* update circle config

* add github action to format code

* add plantir formatter

* update code

* Apply Palantir Java Format

* run parallel ci

* revert tool change

* Apply Palantir Java Format

* fixed: code pipeline issue

* chore: disable circle ci job

* chore: update copyright year

* chore: add archive file

---------

Co-authored-by: github-actions[bot] <41898282+github-actions[bot]@users.noreply.github.com>